--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ author:
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?hl=zh-CN&user=bENA-F0AAAAJ"
   email            : "fyhace@mail.ustc.edu.cn"
-  researchgate     : "https://www.researchgate.net/profile/Jian-Tang-53"
+  researchgate     : "https://posuoshu.github.io/"
   uri              : 
   bitbucket        :
   codepen          :
