--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,4 +1,5 @@
-# main links links
 main:
+  - title: "简介"
+    url: "/zh-cn/#about-me"
   - title: "论文专利"
-    url: "{{ '/publications/' | relative_url }}"
+    url: "/zh-cn/publications/"
