--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,8 +2,8 @@ main:
   - title: "个人简介"
     url: "/#about-me"
   - title: "论文专利"
-    url: "/#-lwzl"
+    url: "/#publications"
   - title: "项目经历"
-    url: "/-project"
+    url: "/#projects"
   - title: "获奖与服务"
-    url: "/-honorservice"
+    url: "/#honorservice"
