--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,8 @@
 main:
   - title: "个人简介"
     url: "/#about-me"
+  - title: "研究概述"
+    url: "/#researchoverview"
   - title: "论文专利"
     url: "/#publications"
   - title: "项目经历"
